[gd_scene load_steps=9 format=3 uid="uid://b16e0jmm3r0ti"]

[ext_resource type="Script" path="res://scenes/UI.gd" id="1_sjf7m"]
[ext_resource type="Texture2D" uid="uid://2tet2e0nwwio" path="res://assets/Icon Buttons Spritesheet.png" id="2_w8nbw"]
[ext_resource type="StyleBox" uid="uid://bpy6tfpwf2rfk" path="res://reso/styles/panel.tres" id="3_4lukp"]
[ext_resource type="Texture2D" uid="uid://dy7whonrj65y7" path="res://reso/icons/items/Carrot.tres" id="3_ks1jn"]
[ext_resource type="Texture2D" uid="uid://dgqfd3c5383l6" path="res://reso/icons/items/Cabbage.tres" id="4_2rpdg"]
[ext_resource type="Texture2D" uid="uid://cswkterqcht0e" path="res://reso/icons/items/Mushroom.tres" id="5_neho1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tlp2q"]
atlas = ExtResource("2_w8nbw")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx8o7"]
atlas = ExtResource("2_w8nbw")
region = Rect2(128, 32, 32, 32)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sjf7m")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Score: 99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Highscore" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 17.0
offset_right = 2.0
offset_bottom = 28.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 7
text = "Highscore: 99"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -38.0
offset_right = -12.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Left" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tlp2q")
texture_pressed = SubResource("AtlasTexture_tlp2q")
texture_hover = SubResource("AtlasTexture_tlp2q")
texture_focused = SubResource("AtlasTexture_tlp2q")

[node name="Right" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_lx8o7")
texture_pressed = SubResource("AtlasTexture_lx8o7")
texture_hover = SubResource("AtlasTexture_lx8o7")
texture_focused = SubResource("AtlasTexture_lx8o7")

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 94.0
offset_right = -2.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_4lukp")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 26.0
offset_right = -26.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.447059, 0.447059, 0.447059, 1)
text = "GAMEOVER"
horizontal_alignment = 1

[node name="Score" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.447059, 0.447059, 0.447059, 1)
theme_override_font_sizes/font_size = 10
text = "Score: 69"
horizontal_alignment = 1

[node name="Highscore" type="Label" parent="GameOverPanel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.447059, 0.447059, 0.447059, 1)
theme_override_font_sizes/font_size = 10
text = "New Highscore!"
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Menu"

[node name="Collections" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 53.0

[node name="HBoxContainer" type="HBoxContainer" parent="Collections"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Collections/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_ks1jn")
expand_mode = 1
stretch_mode = 5

[node name="CarrotAmount" type="Label" parent="Collections/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "x99"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Collections"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Collections/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_2rpdg")
expand_mode = 1
stretch_mode = 5

[node name="CabbageAmount" type="Label" parent="Collections/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "x99"
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Collections"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Collections/HBoxContainer3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_neho1")
expand_mode = 1
stretch_mode = 5

[node name="MushroomAmount" type="Label" parent="Collections/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "x99"
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
